Started work on second row. Decided on movie theme. Still need to format both rows.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,28 @@
             <img></img>
         </div>
     </div>
-    <div class="info">
-        <h2>Best Picture Winners</h2>
+    <h2>Best Picture Winners</h2>
+    <div class="container">
+        <div class="info">
+            <img src="./images/Wings_poster.jpg" alt="Wings_poster">
+            <div class="text">Stuff About The Movie</div>
+        </div>
+        <div class="info">
+            <img src="./images/Broadway_Melody_poster.jpg" alt="Broadway_Melody_poster">
+            <div class="text">Stuff About The Movie</div>
+        </div>
+        <div class="info">
+            <img src="./images/All_Quiet_on_the_Western_Front_(1930_film)_poster.jpg" alt="All_Quiet_on_the_Western_Front_">
+            <div class="text">Stuff About The Movie</div>
+        </div>
+        <div class="info">
+            <img src="./images/Cimarron_1931_Swedish_Film_Poster.png" alt="Cimarron_1931_Film_Poster">
+            <div class="text">Stuff About The Movie</div>
+        </div>
+        <div class="info">
+            <img src="./images/GrandHotelFilmPoster.jpg" alt="GrandHotelFilmPoster">
+            <div class="text">Stuff About The Movie</div>
+        </div>
     </div>
     <div class="quote">
     </div>
