Not much to update. Added boxes for the different sections. Next step will be getting all the content and general framework finished. Lastly, I'll focus on formatting to fit the project guidelines.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
         </div>
     </div>
     <div class="quote">
+        <h3>Inspiration movie stuff</h3>
+        <h4>- From Famous Person</h4>
     </div>
     <div class="action">
+        <div class="call-box">
+            Follow for more best picture film lists!
+        </div>
     </div>
     <div class="footer">
     </div>
