Finished most of it. All I have left now is the call to action section and figuring out how to increase the side margins without decreasing the length of the background.

--- a/index.html
+++ b/index.html
@@ -3,52 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Best Picture</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div class="header">
         <div class="top-row">
-            <div class="logo">Header Logo</div>
+            <div class="logo">Academy Awards</div>
             <div class="header-links">
-                <a>Link One</a>
-                <a>Link Two</a>
-                <a>Link Three</a>
+                <a>Home</a>
+                <a>About</a>
+                <a>Settings</a>
             </div>
         </div>        
         <div class="bottom-row">
-            <div class="title-text">Title Text</div>
-            <div class="subtext">Subtext</div>
-            <button>Sign Up</button>
-            <img></img>
+            <div class="bottom-left">
+                <div class="title-text">Best Picture Winners Throughout History</div>
+                <div class="subtext">Have you ever wondered what the greatest movies 100 years ago were?</div>
+                <button>Sign Up</button>
+            </div>  
+            <img src="./images/Oscar-academy-award-free.png" alt="Academy_Award"> 
         </div>
     </div>
     <h2>Best Picture Winners</h2>
     <div class="container">
         <div class="info">
             <img src="./images/Wings_poster.jpg" alt="Wings_poster">
-            <div class="text">Stuff About The Movie</div>
+            <div class="text">1928</div>
         </div>
         <div class="info">
             <img src="./images/Broadway_Melody_poster.jpg" alt="Broadway_Melody_poster">
-            <div class="text">Stuff About The Movie</div>
+            <div class="text">1929</div>
         </div>
         <div class="info">
             <img src="./images/All_Quiet_on_the_Western_Front_(1930_film)_poster.jpg" alt="All_Quiet_on_the_Western_Front_">
-            <div class="text">Stuff About The Movie</div>
+            <div class="text">1930</div>
         </div>
         <div class="info">
             <img src="./images/Cimarron_1931_Swedish_Film_Poster.png" alt="Cimarron_1931_Film_Poster">
-            <div class="text">Stuff About The Movie</div>
+            <div class="text">1931</div>
         </div>
         <div class="info">
             <img src="./images/GrandHotelFilmPoster.jpg" alt="GrandHotelFilmPoster">
-            <div class="text">Stuff About The Movie</div>
+            <div class="text">1932</div>
         </div>
     </div>
     <div class="quote">
-        <h3>Inspiration movie stuff</h3>
-        <h4>- From Famous Person</h4>
+        <h3>Great films aren't just stories told on screen.</h3>
+        <h3>They are timeless pieces of art that capture the essence of the human experience.</h3> 
+        <h3>These best pictures remind us of our shared dreams, struggles, and triumphs, and inspire us to see the world through new eyes.</h3>
+        <h4>- Someone who loves movies</h4>
     </div>
     <div class="action">
         <div class="call-box">
@@ -56,6 +60,7 @@
         </div>
     </div>
     <div class="footer">
+        <h5>Copywright © saltycaramel22 2024</h5>
     </div>
 </body>
 </html>
