All sections are complete except for the call to action. The box is complete but it won't center on the action section. I also have to make the collapsible margins on both sides. After that, everything should be finished.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     </div>
     <div class="action">
         <div class="call-box">
-            Follow for more best picture film lists!
+            <div class="box-text">
+                <h3>Follow for more best picture film lists</h3>
+                <h4>We have a hundred years of films to offer!</h4>
+            </div>
+            <button>Follow</button>
         </div>
     </div>
     <div class="footer">
