Completed all of the sections. Now I just have to add the collapsible margins and I'll be finished with the landing page.

--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
             <div class="text">1932</div>
         </div>
     </div>
-    <div class="quote">
-        <h3>Great films aren't just stories told on screen.</h3>
-        <h3>They are timeless pieces of art that capture the essence of the human experience.</h3> 
-        <h3>These best pictures remind us of our shared dreams, struggles, and triumphs, and inspire us to see the world through new eyes.</h3>
-        <h4>- Someone who loves movies</h4>
-    </div>
-    <div class="action">
-        <div class="call-box">
-            <div class="box-text">
-                <h3>Follow for more best picture film lists</h3>
-                <h4>We have a hundred years of films to offer!</h4>
+    <div class="action-quote">
+        <div class="quote">
+            <h3>Great films aren't just stories told on screen.</h3>
+            <h3>They are timeless pieces of art that capture the essence of the human experience.</h3> 
+            <h3>These best pictures remind us of our shared dreams, struggles, and triumphs, and inspire us to see the world through new eyes.</h3>
+            <h4>- Someone who loves movies</h4>
+        </div>
+        <div class="action">
+            <div class="call-box">
+                <div class="box-text">
+                    <h3>Follow for more best picture film lists</h3>
+                    <h4>We have a hundred years of films to offer!</h4>
+                </div>
+                <button>Follow</button>
             </div>
-            <button>Follow</button>
         </div>
     </div>
     <div class="footer">
